<resources>
    <string name="app_name">QRCodeRealmTest2</string>
    <string name="qr_button_text">Registration</string>
    <string name="info_button_text">Information</string>
    <string name="alarm_button">Alarm</string>
    <string name="setting_button_text">setting</string>
    <string name="register_button_text">Register</string>
    <string name="camera_button_text">Start Up</string>
    <string name="information_text">InformationList</string>
    <string name="delete_button_text">Delete</string>
    <string name="notification_button_text">Notification Setting</string>
    <string name="return_button_text">Return</string>
    <string name="notification_title_text">Notification</string>
    <string name="notification_add_button_text">Add</string>
    <string name="notification_channel_name">Service sample notification</string>
    <string name="colon">:</string>
    <string name="home_button_text">Home</string>
    <string name="alarm_setting_button">Notification</string>
    <string name="notification_list_title">NotificationList</string>
    <string name="check_button_text">Took Medicine</string>
    <string name="morning_checkbox_text">Morning</string>
    <string name="noon_checkbox_text">Noon</string>
    <string name="night_checkbox_text">Night</string>
    <string name="time_setting_button_text">Time Setting</string>
    <string name="next_button_text">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>